Revert "AUT-4574: CheckReAuthUserHandler lockout refactor"